// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggle highlight component > should render button 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline-secondary"
    title="extract.hide_highlight.title"
    type="button"
  >
    <i
      class="bi bi-bounding-box-circles"
    />
  </button>
</DocumentFragment>
`;

exports[`toggle highlight component > should toggle state 1`] = `
<DocumentFragment>
  <button
    class="btn btn-secondary"
    title="extract.hide_highlight.title"
    type="button"
  >
    <i
      class="bi bi-bounding-box-circles"
    />
  </button>
</DocumentFragment>
`;

exports[`toggle highlight component > should toggle state 2`] = `
<DocumentFragment>
  <button
    class="btn btn-outline-secondary"
    title="extract.hide_highlight.title"
    type="button"
  >
    <i
      class="bi bi-bounding-box-circles"
    />
  </button>
</DocumentFragment>
`;
